--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prosemirror-commands": "1.7.0",
+    "prosemirror-keymap": "1.2.2",
+    "prosemirror-model": "^1.25.0",
+    "prosemirror-state": "1.4.3",
+    "prosemirror-view": "1.38.1",
     "solid-js": "^1.9.5"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "solid-devtools": "^0.34.0",
     "vite": "^6.2.5",
     "vite-plugin-solid": "^2.11.6"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@biomejs/biome",
       "esbuild"
     ]
   }
